618645_myconfig/618645-webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 618645-webapp-deployment
  namespace: 618645-proj
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: 618645-webapp-deployment
        image: narendran573/rosa-webapp-618645:v1
        ports:
        - containerPort: 8001
